# iot-master

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docker/: DockerfileLight  DockerfileTg
docs/: README.md
ha_integrations/hello_service/: __init__.py
ha_integrations/simple_light/: __init__.py  const.py  light.py  manifest.json
ha_integrations/telegram_bot_assistant/: __init__.py  const.py  manifest.json
ha_integrations/telegram_bot_assistant/recognizer/: dummy_config.py  message_recognizer_local_files.py
iot_master/: main.py
message_recognizer_local_mic/: message_recognizer_local_mic.py
message_source_mbm/: main.py
message_source_mbm/interfaces/: i_messages_recognizer_mlm.py
message_source_mlm/: _command_performer.py  audio.py  utils.py
message_source_mlm/interfaces/: i_command_performer_mlm.py
project/: audio.py  command_performer.py  commands.py  config.py  main.py  utils.py
recognizer/: pyproject.toml
recognizer/app_interfaces/: i_command_recognizer.py
recognizer/app_utils/: utils.py
recognizer/command_recognizer/: command_recognizer_simple.py
recognizer/commands/command_get_current_os/: command_get_current_os.py
recognizer/commands/command_get_current_time/: command_get_current_time.py
recognizer/massages_source/: messages_source.py
recognizer/message_recognizer_local_mic/: message_recognizer_local_mic.py
simple_console_light/: Dockerfile  main.py  pyproject.toml
tg_bot/: Dockerfile  config.sample.yaml  main.py  pyproject.toml
tg_bot/src/: bot.py  config.py  routers.py
tg_bot/src/devices/: light.py  utils.py
tg_bot/src/message_recognizers/: i_messages_recognizer.py  i_messages_source.py  message_recognizer_tg_bot.py  message_source.py
tg_bot/src/message_recognizers/commands/: lights_turn_off.py  lights_turn_on.py  utils.py
