[tool.poetry]
name = "speechrecognizer"
version = "0.1.0"
description = ""
authors = ["ewasince <ewasince@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"


[tool.poetry.group.message_recognizer_local_mic.dependencies]
speechrecognition = "^3.10.0"
google-cloud-speech = "^2.21.0"
pyaudio = "^0.2.13"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
